# powering-privacy

./: README.md  walkthrough.md
android/: .gitignore  README.md  build.gradle  configuration.properties  orbot-add-setting-to-disable-connection-padding.patch  settings.gradle
android/app_energy_runner/: build.gradle
android/app_energy_runner/src/main/: AndroidManifest.xml
android/app_energy_runner/src/main/res/layout/: activity_main.xml
android/app_metronom/: build.gradle
android/app_metronom/src/main/: AndroidManifest.xml
android/figures/: 00-android-overview.drawio
android/lib_arkworkskt/: build.gradle
android/lib_arkworkskt/rust_arkworks_wrapper/: Cargo.toml
android/lib_arkworkskt/rust_arkworks_wrapper/src/: common_groth16.rs  lib.rs  main.rs
android/lib_arkworkskt/src/main/: AndroidManifest.xml
android/lib_common/: build.gradle
android/lib_common/src/androidTest/: AndroidManifest.xml
android/lib_common/src/main/: AndroidManifest.xml
android/lib_sphinxkt/: build.gradle
android/lib_sphinxkt/rust_sphinx_wrapper/: Cargo.toml
android/lib_sphinxkt/rust_sphinx_wrapper/src/: lib.rs
android/lib_sphinxkt/src/main/: AndroidManifest.xml
arduino/: README.md
arduino/logger/: logger.ino
hardware/: README.md  assembly-instructions.md  bill-of-materials.md  build-instructions.md
hardware/3d-parts/: README.md  battery.scad  battery.stl  battery_0.6n_0.15mm_PLA_MK3S_38m.gcode  holder.scad  holder.stl  holder_0.6n_0.15mm_PLA_MK3S_1h22m.gcode
livelogger/: README.md  build.gradle  settings.gradle
livelogger/src/main/kotlin/: CsvUtils.kt  FileTrailingDataSource.kt  GraphController.kt  GraphData.kt  GraphView.kt  Main.kt  MainUi.kt
measurements/sample-traces/: README.md  decompress_sample_traces.sh
notebooks/: .dockerignore  .gitignore  Dockerfile  README.md  jupyter_crypto_sections.ipynb  jupyter_tor.ipynb  requirements.txt
rsoxy/: .gitignore  Cargo.toml  Dockerfile  README.md
rsoxy/measurements/: .gitignore
rsoxy/src/: data_point.rs  main.rs  output_consumer.rs  serial_port_reader.rs
scenarios/: crypto_asymmetric.scenario  crypto_hashing.scenario
scripts/: README.md  analyze.py  import-sample-traces.sh  upload_scenarios.sh  utils.py
webservice/: .dockerignore  .htpasswd  README.md  app.py
(+43 files in other folders)
